fixed contrast issue in banner

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -69,7 +69,7 @@ ul {
   left: 2%;
   width: 200px;
   text-align: center;
-  background-color: rgba(178, 243, 255, 0.493);
+  background-color: rgba(255, 255, 255, 0.582);
   padding: 1em;
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
